Security error solvented, modifications in services, and readme updated